--- a/modules/ROOT/pages/deployment/services/s-list/auth-bearer.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/auth-bearer.adoc
@@ -27,4 +27,4 @@ This will change over time and be documented when available.
 
 == Configuration
 
-include::partial$deployment/services/env-and-yaml.adoc[]
+include::partial$deployment/services/env-and-yaml.adoc[tag=envvars-yaml]
