--- a/modules/ROOT/pages/deployment/services/s-list/webfinger.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/webfinger.adoc
@@ -135,4 +135,4 @@ Now, an authenticated webfinger request for `acct:me@example.org` (when logged i
 
 == Configuration
 
-include::partial$deployment/services/env-and-yaml.adoc[]
+include::partial$deployment/services/env-and-yaml.adoc[tag=envvars-yaml]
