--- a/modules/ROOT/pages/deployment/services/s-list/auth-machine.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/auth-machine.adoc
@@ -26,4 +26,4 @@ Note that with the upcoming xref:{s-path}/auth-service.adoc[auth-service] servic
 
 == Configuration
 
-include::partial$deployment/services/env-and-yaml.adoc[]
+include::partial$deployment/services/env-and-yaml.adoc[tag=envvars-yaml]
