--- a/modules/ROOT/pages/deployment/services/s-list/storage-shares.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/storage-shares.adoc
@@ -16,4 +16,4 @@
 
 == Configuration
 
-include::partial$deployment/services/env-and-yaml.adoc[]
+include::partial$deployment/services/env-and-yaml.adoc[tag=envvars-yaml]
