--- a/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
@@ -99,12 +99,12 @@ When done, create a project directory like `ocis-compose` in your home directory
 +
 [tabs]
 ====
-{compose_tab_1_tab_text}::
+{compose_tab_text}::
 +
 --
-{composer-url}{compose_tab_1}{composer-final-path}[Docker Compose deployment examples directory,window=_blank]
+{compose_url}{compose_url_component}{compose_final_path}[Docker Compose deployment examples directory,window=_blank]
 
-Using git version name: `{compose_tab_1}`
+Using git version name: `{compose_url_component}`
 --
 ====
 +
@@ -115,7 +115,7 @@ Note that github will not let you download a single directory easily. You can ge
 +
 [source,bash,subs="attributes+"]
 ----
-git clone --depth 1 https://github.com/owncloud/ocis.git -b {compose_tab_1_tab_text}
+git clone --depth 1 https://github.com/owncloud/ocis.git -b {compose_git_name}
 ----
 
 // https://stackoverflow.com/questions/7106012/download-a-single-folder-or-directory-from-a-github-repo
@@ -124,7 +124,7 @@ git clone --depth 1 https://github.com/owncloud/ocis.git -b {compose_tab_1_tab_t
 +
 [source,plaintext,subs="attributes+"]
 ----
-{download-gh-directory-url}?url={composer-url}{compose_tab_1}{composer-final-path}
+{download-gh-directory-url}?url={compose_url}{compose_url_component}{compose_final_path}
 ----
 --
 
