--- a/modules/ROOT/pages/maintenance/commands/revisions-cleanup.adoc
+++ b/modules/ROOT/pages/maintenance/commands/revisions-cleanup.adoc
@@ -7,7 +7,7 @@ The revisions command allows removing the revisions of files in the storage.
 ocis revisions purge -p /base/path/storage/users
 ----
 
-It takes the `--resource-id` (or `--r`) parameter which specify the scope of the command:
+It takes the `--resource-id` (or `--r`) parameter which specifies the scope of the command:
 
 * An empty string (default) removes all revisions from all spaces.
 * A spaceID (like `d419032c-65b9-4f4e-b1e4-0c69a946181d\$44b5a63b-540c-4002-a674-0e9c833bbe49`) removes all revisions in that space.
