[5.0] [PR 914] Add offline CLI commands to maintenence
Backport of PR #914

--- a/modules/ROOT/pages/maintenance/commands/trash.adoc
+++ b/modules/ROOT/pages/maintenance/commands/trash.adoc
@@ -1,4 +1,4 @@
-= Revisions Cleanup
+= Trash CLI
 
 The trash cli command allows removing empty folders from the trashbin. This should be used to speed up trash bin operations.
 
