[5.0] [PR 884] Production deployment based on docker compose
Backport of PR #884

--- a/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc
+++ b/modules/ROOT/pages/depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc
@@ -48,7 +48,7 @@ You, as administrator, must have the following minimum knowledge stack.
 * Being capable to order and configure external accessible domains.
 
 * Being capable to configure: +
-Router, Firewall, NAT, DHCP, networks ect.
+Router, Firewall, NAT, DHCP, networks etc.
 
 * Command line (bash) tools like: +
 ssh, actions on files, edit files etc.
