--- a/modules/ROOT/pages/deployment/services/s-list/auth-app.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/auth-app.adoc
@@ -21,7 +21,8 @@ include::partial$deployment/services/auth-service-family.adoc[]
 
 == Service Startup
 
-Because this service is not started automatically, a manual start needs to be initiated which can be done in several ways. To configure the service usage, an environment variable for the proxy service needs to be set to allow app authentication.
+* Because this service is not started automatically, a manual start needs to be initiated which can be done in several ways, only one example is shown below. For more details see the xref:deployment/general/general-info.adoc#start-infinite-scale[Start Infinite Scale] section.
+* To configure the service usage, an environment variable for the proxy service needs to be set to allow app authentication.
 
 [source,bash]
 ----
